[gd_scene load_steps=7 format=3 uid="uid://bhe0uwcfb0dat"]

[ext_resource type="Texture2D" uid="uid://dodurqyroyjnx" path="res://graphics/enemies/scout.png" id="1_11kli"]
[ext_resource type="Script" path="res://scenes/mobs/enemies/scout.gd" id="1_vhp6k"]
[ext_resource type="Shader" path="res://scenes/mobs/enemies/scout.gdshader" id="2_4byxm"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_gxt53"]
shader = ExtResource("2_4byxm")
shader_parameter/color = Color(0.749202, 0.892995, 0.986425, 1)
shader_parameter/progress = 0.0

[sub_resource type="CircleShape2D" id="CircleShape2D_e1jms"]
radius = 46.0

[sub_resource type="CircleShape2D" id="CircleShape2D_442ea"]
radius = 920.107

[node name="Scout" type="CharacterBody2D" groups=["Entity", "Scouts"]]
collision_layer = 2
collision_mask = 15
script = ExtResource("1_vhp6k")

[node name="Sprite2D" type="Sprite2D" parent="."]
material = SubResource("ShaderMaterial_gxt53")
position = Vector2(42, -2)
rotation = 1.5708
texture = ExtResource("1_11kli")
region_enabled = true
region_rect = Rect2(0.322102, 0, 172.934, 222.948)

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_e1jms")

[node name="AttackArea" type="Area2D" parent="."]
collision_layer = 16

[node name="CollisionShape2D" type="CollisionShape2D" parent="AttackArea"]
shape = SubResource("CircleShape2D_442ea")

[node name="LaserSpawnPositions" type="Node2D" parent="."]

[node name="Marker2D" type="Marker2D" parent="LaserSpawnPositions"]
position = Vector2(114, -27)

[node name="Marker2D2" type="Marker2D" parent="LaserSpawnPositions"]
position = Vector2(123, 10)

[node name="Timers" type="Node" parent="."]

[node name="LaserCoolDown" type="Timer" parent="Timers"]

[node name="HitTime" type="Timer" parent="Timers"]
wait_time = 0.2
one_shot = true

[connection signal="body_entered" from="AttackArea" to="." method="_on_attack_area_body_entered"]
[connection signal="body_exited" from="AttackArea" to="." method="_on_attack_area_body_exited"]
[connection signal="timeout" from="Timers/LaserCoolDown" to="." method="_on_timer_timeout"]
[connection signal="timeout" from="Timers/HitTime" to="." method="_on_hit_time_timeout"]
